Update تسهیم فروش - سرگرمی.md

--- a/Entertainment/تسهیم فروش - سرگرمی.md
+++ b/Entertainment/تسهیم فروش - سرگرمی.md
@@ -1,6 +1,6 @@
 
 
-# تسهیم فروش
+## تسهیم فروش
 
 این نوع فاکتور برای زمانی مناسب است که شما بخواهید محصولات یا خدمات سایر کسب وکارها را به فروش برسانید و یا در بازی‌ها بخواهید برای طراح، برنامه‌نویس، تولید‌کننده‌ی محتوا و ... سهم‌های جداگانه در نظر بگیرید. در این شرایط می‌توانید نوعی فاکتور با قوانین تسهیم فروش صادر نمایید. ظاهراً خریدار تغییری را احساس نخواهد کرد و یک فاکتور تجمیعی را پرداخت می‌­کند. ولی در عمل، به تعداد ذینفعان با مبلغ تسهیمی، فاکتور صادر شده و مبا‌لغ مستقیماً پس از پرداخت به حساب آن‌­ها منتقل می‌شود.
 
@@ -12,7 +12,7 @@
 ## اجازه ثبت فاکتور
 در صورتی که بخشی از فروش شما به کسب و کار دیگری تعلق دارد و میخواهید فاکتور به نام همان کسب و کار ثبت شود، لازم است آن کسب و کار به کسب و کار شما اجازه صدور فاکتور به عنوان معامله گر را داده باشد. برای این منظور خود کسب و کار ذینفع یا کارگزار او، با استفاده از توکن که در اختیار دارد، با استفاده از سرویس زیر به کسب کار دیگر اجازه صدور فاکتور می دهد.
 
-```C#
+```csharp
 var output = new ResultSrv<BusinessDealerSrv>();
 var addDealerVo = AddDealerVo.ConcreteBuilder
                     .SetDealerBizId({Put your DealerBizId})
@@ -27,7 +27,8 @@ billingService.AddDealer(addDealerVo, response => Listener.GetResult(response, o
 برای دریافت یا جستجوی لیست تمام کسب و کارهایی که به آنها مجوز معامله و صدور فاکتور داده اید، از سرویس زیر استفاده نمایید.
 توجه داشته باشید در صورتی که شناسه کسب و کار را اشتباه وارد کنید، با اررور "شناسه کسب و کار یافت نشد" مواجه نخواهید شد بلکه در فایل خروجی هیچ مقداری دریافت نخواهید کرد.
 (با hasError": false")
-```C#
+
+```csharp
 var output = new ResultSrv<List<BusinessDealerSrv>>();
 var dealerListVo = DealerListVo.ConcreteBuilder
                     //.SetDealerBizId(0)
@@ -43,7 +44,7 @@ billingService.DealerList(dealerListVo, response => Listener.GetResult(response,
 ## فعالسازی مجوز معامله گران
 برای فعالسازی مجوز معامله گران، به ترتیب از سرویس  زیر استفاده نمایید.
 
-```C#
+```csharp
 var output = new ResultSrv<BusinessDealerSrv>();
  var enableDealerVo = EnableDealerVo.ConcreteBuilder
                     .SetDealerBizId({Put your DealerBizId})
@@ -55,7 +56,7 @@ billingService.EnableDealer(enableDealerVo, response => Listener.GetResult(respo
 ## فعالسازی مجوز معامله گران
 برای غیر فعالسازی مجوز معامله گران، از سرویس  زیر استفاده نمایید.
 
-```C#
+```csharp
 var output = new ResultSrv<BusinessDealerSrv>();
  var enableDealerVo = EnableDealerVo.ConcreteBuilder
                     .SetDealerBizId({Put your DealerBizId})
@@ -68,7 +69,7 @@ billingService.EnableDealer(enableDealerVo, response => Listener.GetResult(respo
 ## لیست کسب و کارهایی که واسط آن هستید
 با فراخوانی سرویس زیر می توانید لیست کسب و کارهایی که واسط آن ها شده اید را دریافت نمایید.
 
-```C#
+```csharp
 var output = new ResultSrv<List<BusinessDealerSrv>>();
 var businessDealingListVo = BusinessDealingListVo.ConcreteBuilder
                     .SetDealerBizId({Put your DealerBizId})
@@ -87,7 +88,7 @@ billingService.BusinessDealingList(businessDealingListVo,response => Listener.Ge
 
 کسب و کار معامله گر که لازم است فاکتور تسهیمی صادر نماید باید از جانب کسب و کارهای سهیم دارای مجوز صدور فاکتور باشد. سپس می‌تواند با استفاده از سرویس زیر تسهیم فروش انجام دهد.
 
-```C#
+```csharp
 var output = new ResultSrv<InvoiceSrv>();
 var ottOutput = GetOtt();
 var mainInvoiceVos = MainInvoiceVo.ConcreteBuilder
@@ -154,7 +155,8 @@ billingService.IssueMultiInvoice(issueMultiInvoiceVo, response => Listener.GetRe
 در فاکتور تسهیمی نیز مانند فاکتور عادی با لغو شدن، کل مبلغ فاکتور و با کاهش، قسمتی از مبلغ به مشتری بازگردانده می شود. ولی در فاکتور تسهیمی برای کاهش لازم است کل سهم ها مجدداً اعلام شوند تا مبلغی که کسر می شود از حساب درست برداشته شود. برای کاهش فاکتور تسهیمی از سرویس ReduceMultiInvoice استفاده نمایید.
 مقدار id در تمام بخش های اطلاعات ارسالی باید مطابق با شناسه های فاکتور اصلی باشد، در غیر این صورت خطا رخ می دهد. در فاکتور اصلاح شده نیز شرایط زیر لازم است برقرار باشد:      
 the share of dealer + the share of shareholder =  the price to be payed by customer
-```C#
+
+```csharp
  var output = new ResultSrv<InvoiceSrv>();
 var mainInvoiceVos = ReduceInvoiceItemVo.ConcreteBuilder
                     .SetId({Put your Id})
@@ -199,7 +201,7 @@ billingService.ReduceMultiInvoice(reduceMultiInvoiceVo, response => Listener.Get
 ## کاهش فاکتور تسهیمی و انتقال به شبا
 در صورتی که می خواهید بلافاصله بعد از کاهش فاکتور، مبلغ برگشتی به شماره شبا کاربر منتقل گردد، از سرویس زیر با همان فرمت data سرویس ReduceMultiInvoice، استفاده نمایید.
 
-```C#
+```csharp
 var output = new ResultSrv<InvoiceSrv>();
 var mainInvoiceVos = ReduceInvoiceItemVo.ConcreteBuilder
                     .SetId({Put your Id})
@@ -247,7 +249,7 @@ billingService.ReduceMultiInvoiceAndCashout(reduceMultiInvoiceAndCashoutVo, resp
 همانطور که توضیح داده شد، به منظور صدور فاکتور تسهیمی (در صورت شراکت با یک کسب و کار دیگر)، فراخوانی سرویس nzh/biz/addDealer قبل از فراخوانی سرویس صدور فاکتور تسهیمی، الزامی ست. اما در صورتی که برای یک محصول خاص، بخواهید به کسب و کار دیگری مجوز صدور فاکتور عادی اعطا کنید، علاوه بر فراخوانی سرویس ذیل، باید سرویس nzh/biz/addDealer را نیز فراخوانی نمایید و سپس سرویس صدور فاکتور(nzh/issueInvoice) را  فراخوانی نمایید؛ در غیر این صورت با خطای  "کسب و کار دلال وارد شده دلال  کسب و کار مالک محصول نمی باشد" مواجه خواهید شد.
 شناسه محصول(EntityId) و شناسه کسب و کار(DealerBizId) را کافی ست در در  کلاس AddDealerProductPermissionVo مقداردهی نمایید و سپس سرویس AddDealerProductPermission فراخوانی کنید.
 
-```C#
+```csharp
 var output = new ResultSrv<DealerProductPermissionSrv>();
 var registerUserVo = AddDealerProductPermissionVo.ConcreteBuilder
                     .SetEntityId({Put your EntityId})
@@ -262,7 +264,7 @@ billingService.AddDealerProductPermission(registerUserVo, response => Listener.G
 ## دریافت لیست مجوزها
 با این سرویس می توانید لیست مجوزهای خود به کسب و کارهای واسط دیگر را به انضمام شناسه محصول، مشاهده نمایید.
 
-```C#
+```csharp
 var output = new ResultSrv<List<DealerProductPermissionSrv>>();
 var registerUserVo = DealerProductPermissionListVo.ConcreteBuilder
                     //.SetSize({Put your Size})
@@ -282,7 +284,7 @@ billingService.DealerProductPermissionList(registerUserVo,response => Listener.G
 لیست دسترسی هایی که شما واسط آن کسب و کار شده اید و برای آن محصول خاص مجوز صدور فاکتور گرفته اید را می توانید با سرویس
 زیر مشاهده نمایید.
 
-```C#
+```csharp
 var output = new ResultSrv<List<DealerProductPermissionSrv>>();
 var registerUserVo = DealingProductPermissionListVo.ConcreteBuilder
                     //.SetSize({Put your Size})
@@ -298,7 +300,7 @@ billingService.DealingProductPermissionList(registerUserVo,response => Listener.
 ## فعال کردن دسترسی محصول
 با استفاده از سرویس ذیل می توانید دسترسی محصولی به کسب و کار واسط اعطا نموده اید را فعال نمایید.
 
-```C#
+```csharp
 var output = new ResultSrv<DealerProductPermissionSrv>();
 var enableDealerProductPermissionVo= EnableDealerProductPermissionVo.ConcreteBuilder
                     .SetEntityId({Put your EntityId})
@@ -313,7 +315,7 @@ billingService.EnableDealerProductPermission(enableDealerProductPermissionVo,res
 ## غیرفعال کردن دسترسی محصول
  با استفاده از سرویس ذیل می توانید دسترسی محصولی که به کسب و کار واسط اعطا نموده اید را غیرفعال نمایید.
 
-```C#
+```csharp
 var output = new ResultSrv<DealerProductPermissionSrv>();
 var registerUserVo = DisableDealerProductPermissionVo.ConcreteBuilder
                     .SetEntityId({Put your EntityId})
@@ -329,7 +331,7 @@ billingService.DisableDealerProductPermission(registerUserVo,response => Listene
 ## افزودن کسب‌وکار واسط
 addDealer: در صورتی که بخشی از فروش شما به کسب و کار دیگری تعلق دارد و می خواهید فاکتور به نام همان کسب و کار ثبت شود، لازم است آن کسب و کار، به کسب و کار شما اجازه صدور فاکتور به عنوان معامله گر را داده باشد. با در اختیار داشتن شناسه کسب و کار دیگر با استفاده از این تابع می توانید این اجازه را صادر کنید.
 
-```JS
+```node.js
 let addDealerData = {
   // ------ REQUIRED ------
   dealerBizId: 0 // ID
@@ -438,7 +440,7 @@ podBillingService.dealerList(dealerListData)
 ## فعالسازی کارگزار
 enableDealer: با استفاده از این تابع می توانید کسب کارهای واسط را فعال کنید
 
-```JS
+```node.js
 let enableDealerData = {
   // ------ REQUIRED ------
   dealerBizId: 0 // ID
@@ -500,7 +502,7 @@ podBillingService.enableDealer(enableDealerData)
 ## غیرفعالسازی کسب‌وکار واسط
 disableDealer: با استفاده از این تابع می توانید کسب کارهای واسط را غیر فعال کنید
 
-```JS
+```node.js
 let disableDealerData = {
   // ------ REQUIRED ------
   dealerBizId: 0 // ID
@@ -559,7 +561,7 @@ podBillingService.disableDealer(disableDealerData)
 ## لیست کسب‌وکارهایی که واسط آن‌ها شده‌اید
 businessDealingList: با فراخوانی سرویس ذیل می توانید لیست کسب و کارهایی که واسط آن ها شده اید را دریافت نمایید.
 
-```JS
+```node.js
 let businessDealingListData = {
   // ------ REQUIRED ------
 
@@ -650,7 +652,7 @@ podBillingService.businessDealingList(businessDealingListData)
 ## صدور فاکتور تسهیمی
 issueMultiInvoice: کسب و کار معامله گر می تواند با استفاده از این تابع یک فاکتور تسهیمی ثبت نماید
 
-```JS
+```node.js
 let issueMultiInvoiceData = {
   // ------ REQUIRED ------
   data: {
