Update and rename  04 - بن کارت.md to 04 - بن کارت.md

--- a/Banking/04 - بن کارت.md
+++ b/Banking/04 - بن کارت.md
@@ -8,6 +8,7 @@
 
 جهت تعریف شارژ اعتبار، سرویس زیر را فراخوانی نمایید:
 
+```curl
     Header:
         _token_=[api_token]
         _token_issuer_=1
@@ -16,6 +17,7 @@
             [platform-address]/nzh/biz/defineCreditVoucher
     Parameters:
             // برای ملاحظه پارامترها به لینک"تست و نمونه کد" مراجعه نمایید
+```
 
 توجه داشته باشید به ازای هر بن تخفیف، باید مقادیر تعداد، مبلغ، نام و توضیحات در پارامترهای جداگانه ارسال گردند.
 
@@ -28,6 +30,7 @@
 
 جهت تعریف شارژ، لازم است در صنف خود حتما اعتبار داشته باشید، هم‌چنین می‌توانید کد هش را به صورت دلخواه تعریف نمایید.
 
+```curl
     Header:
         _token_=[api_token]
         _token_issuer_=1
@@ -36,6 +39,7 @@
             [platform-address]/nzh/biz/defineDiscountAmountVoucher
     Parameters:
             // برای ملاحظه پارامترها به لینک"تست و نمونه کد" مراجعه نمایید
+```
 
 توجه داشته باشید به ازای هر بن تخفیف، باید مقادیر تعداد، مبلغ، نام و توضیحات در پارامترهای جداگانه ارسال گردند.
 
@@ -46,6 +50,7 @@
 
 جهت تعریف شارژ بن تخفیف، در قالب درصد سرویس ذیل را فراخوانی نمایید:
 
+```curl
     Header:
         _token_=[api_token]
         _token_issuer_=1
@@ -54,6 +59,7 @@
             [platform-address]/nzh/biz/defineDiscountPercentageVoucher
     Parameters:
             // برای ملاحظه پارامترها به لینک"تست و نمونه کد" مراجعه نمایید
+```
 
 توجه داشته باشید به ازای هر بن تخفیف، باید مقادیر تعداد، درصد، نام و توضیحات در پارامترهای جداگانه ارسال گردند.
 
@@ -70,6 +76,7 @@
 
 بعد از تعریف ووچر، برای اعمال ووچر به فاکتور (درصورتی که پارامتر postVoucherEnabled در صدور فاکتور را با مقدار true ارسال نموده باشید)، سرویس ذیل را فراخوانی نمایید:
 
+```curl
     Header:
         _token_=[api_token]
         _token_issuer_=1
@@ -81,6 +88,7 @@
             invoiceId= 
             voucherHash= // لیست کد بن تخفیف
             preview=[true/false] // پیش نمایش اعمال ووچر روی فاکتور - در سیستم ثبت نمی‌گردد
+```
 
 بن تخفیف جهت اعمال روی یک فاکتور، می‌تواند بیش از یک مورد باشد.
 
@@ -91,6 +99,7 @@
 
 با سرویس زیر امکان خواهید داشت در بین لیست‌های بن کسب و کارتان جستجو و آن را دریافت نمایید:
 
+```curl
     Header:
         _token_=[api_token]
         _token_issuer_=1
@@ -99,6 +108,7 @@
             [platform-address]/nzh/biz/getVoucherList
     Parameters:
             // برای ملاحظه پارامترها به لینک"تست و نمونه کد" مراجعه نمایید
+```
 
 توجه داشته باشید به ازای هر بن تخفیف، باید مقادیر تعداد، مبلغ، نام و توضیحات در پارامترهای جداگانه ارسال گردند.
 
@@ -109,6 +119,7 @@
 
 سرویس ذیل را جهت غیرفعال کردن بن تخفیف زودتر از موعد فراخوانی نمایید:
 
+```curl
     Header:
         _token_=[api_token]
         _token_issuer_=1
@@ -117,9 +128,11 @@
             [platform-address]/nzh/biz/deactivateVoucher
     Parameters:
             id=
+```
 
 فعال نمودن مجدد بن تخفیف:
 
+```curl
     Header:
         _token_=[api_token]
         _token_issuer_=1
@@ -128,6 +141,7 @@
             [platform-address]/nzh/biz/activateVoucher
     Parameters:
             id=
+```
 
 <div class="box-end">
 </div>
