Update درگاه پرداخت - 02.md

--- a/Banking/درگاه پرداخت - 02.md
+++ b/Banking/درگاه پرداخت - 02.md
@@ -6,7 +6,7 @@
 
 نحوه ارسال شناسه مشتری: مقدار client_id (موجود در پنل مدیریت کسب و کار) را در انتهای url  قرار دهید. (بدون آکولاد)
 
-```
+```curl
 HEADERS:
         Authorization=Bearer [_api_token_]
         Content-Type=application/x-www-form-urlencoded
@@ -16,7 +16,6 @@ Url:
 Parameters:
         device_uid=[unique identity of device] *
 ```
-
 
 <div class="box-end">
 </div>
