--- a/Banking/فاکتور/فاکتور.md
+++ b/Banking/فاکتور/فاکتور.md
@@ -1,8 +1,11 @@
 
-# فاکتور
+## فاکتور
+
 <div class="tab-start">
 </div>
+
 # [csharp](#tab/csharp)
+
 ## صدور فاکتور توسط کسب وکار 
 هرگونه پرداخت در پلتفرم پاد، از طریق فاکتور صورت می‌گیرد. در این بخش صدور فاکتور با استفاده از توکن کسب‌و‌کار شرح داده شده و می‌توان با خروجی حاصل از این متد، کاربر را به راحتی به درگاه پرداخت هدایت نمود. برای  صدور فاکتور از سرویس زیر استفاده نمایید. شبه کد زیر یک فاکتور با دو بند  فاکتور را شامل می شود:
 پارامترهای اختیاری کامنت شده اند,برای استفاده می توانید از حالت کامنت خارج کنید.
@@ -2682,9 +2685,6 @@ BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
         }
 ```
 
-
- <div class="box-end">
-</div>
 
 <div class="tab-end">
 </div>
