Update عملیات کارت بانکی - 06.md

--- a/Banking/عملیات کارت بانکی - 06.md
+++ b/Banking/عملیات کارت بانکی - 06.md
@@ -32,6 +32,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **دریافت اطلاعات سپرده از شماره کارت** "  توسط سرویس فراخوانی سرویس پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -48,6 +49,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [ your Timestamp ] *
            paramNames= signature *
            paramValues= [ your signature] *
+```
 
 <div class="box-end">
 </div>
@@ -78,6 +80,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 فراخوانی سرویس " **بازیابی اطلاعات شبا از شماره کارت** "  توسط سرویس فراخوانی سرویس پاد
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -94,7 +97,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [ your Timestamp ] *
            paramNames= signature *
            paramValues= [ your signature] *
-
+```
 
 <div class="box-end">
 </div>
@@ -131,6 +134,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
 
 \**تــوجـه** : این سرویس پیش نیاز سرویس **" انتقال وجه کارت به کارت** **"** میباشد و **" شماره ارجاع "**  دریافت شده از پاسخ این سرویس جهت استفاده در " **سرویس انتقال وجه** " مورد نیاز میباشد.
 
+```curl
     HEADER:
             _token_=[ api_token ]
             _token_issuer_= 1
@@ -151,6 +155,7 @@ yyyy/MM/dd HH:mm:ss:fff :**Timestamp**   تاریخ ثبت درخواست میل
            paramValues= [your Timestamp] *
            paramNames= Signature *
            paramValues= [your Signature] *
+```
 
 <div class="box-end">
 </div>
