Update کیف پول - 09.md

--- a/Banking/کیف پول - 09.md
+++ b/Banking/کیف پول - 09.md
@@ -11,7 +11,7 @@
 
 - انتخاب بسته افزایشی
 
-```
+```curl
 GET  [private-calls-address]/v1/pbc/BuyCredit/
 ?redirectUri=[redirectURL]
 &callUri=[The function that will be called at the end of charge]
@@ -45,7 +45,7 @@ paid&tref
 
 ابتدا توسط سرویس زیر یک فاکتور افزایش موجودی ایجاد نموده، سپس با hash ایجاد شده کاربر را به درگاه هدایت نمایید:
 
-```
+```curl
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -64,7 +64,7 @@ Parameters:
 
 خروجی سرویس بالا شامل یک hash می باشد که فقط 15 دقیقه معتبر است:
 
-```
+```curl
 {
 
   "hasError": false,
@@ -86,7 +86,7 @@ Parameters:
 
 مقدار آن را در آدرس زیر قرار داده و کاربر را به آن صفحه هدایت نمایید:
 
-```
+```curl
 MAIN server:
         https://core.pod.land/nzh/payAnyCreditInvoice?hash=&gateway=PEP
 
@@ -102,7 +102,7 @@ tref=636980964366129546&payed=false&gws_rd=ssl
 
 مقدار tref شماره پیگیری تراکنش شاپرکی می‌باشد و در این مرحله لازم است شارژ کیف پول توسط سرویس زیر تایید گردد:
 
-```
+```curl
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -130,7 +130,7 @@ Parameters:
 
 کسب و کار می‌تواند از طریق API زیر، مبلغ مورد نظر خود را از کیف پولش به شماره شبای ثبت شده در پروفایل خود منتقل کند. در صورتی که شماره شبا یا نام و نام خانوادگی شخص در پروفایل ثبت نشده باشد این سرویس خطا خواهد داد.
 
-```
+```curl
 HEADER:
         _token_=[API_TOKEN]            //توکن صاحب حساب
         _token_issuer_=1
@@ -151,7 +151,7 @@ Parameters:
 
 در حساب های صنفی همواره مبلغی به عنوان مبلغ قابل تسویه وجود دارد که شامل دارایی کسب و کار بجز فاکتورهای باز او یا فاکتورهایی که مبلغ آن ها هنوز واریز نشده است، می باشد. مبلغ قابل تسویه را می توان از طریق API زیر تسویه نمود:
 
-```
+```curl
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -185,7 +185,7 @@ SETTLEMENT_TOOL_CARD
 
 و به طور مثال، در صورتی که انتقال از طریق کارت را انتخاب نموده‌اید، در قسمت toolId شماره کارت مقصد را وارد نمایید و در غیر این صورت شماره شبا را وارد نمایید.
 
-```
+```curl
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -210,7 +210,7 @@ Parameters:
 
 جهت دریافت لیست تسویه‌ها و وضعیت آن‌ها از سرویس زیر استفاده نمایید:
 
-```
+```curl
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -239,7 +239,7 @@ Parameters:
 
 در صورتی که تسویه خودکار برای یک کسب و کار فعال شود، مبلغ قابل تسویه آن کسب‌وکار به طور خودکار، یکبار در شبانه روز به شماره شبای اعلام شده در پروفایل کسب‌وکار یا شماره شبای اعلامی در سرویس زیر، تسویه می‌گردد. برای فعالسازی تسویه خودکار سرویس زیر را با توکن کسب و کار دارنده حساب فراخوانی نمایید:
 
-```
+```curl
 HEADER:
         _token_=API_TOKEN           //توکن دارنده حساب
         _token_issuer_=1
@@ -261,7 +261,7 @@ Parameters:
 
 با سرویس ذیل می‌توانید تسویه خودکار را غیرفعال نمایید:
 
-```
+```curl
 HEADER:
         _token_=API_TOKEN           //توکن دارنده حساب
         _token_issuer_=1
@@ -283,7 +283,7 @@ Parameters:
 
 کسب و کار باید سرویس زیر را برای این منظور صدا بزند. دقت نمایید که مبالغی که منتقل می‌شوند باید تراز باشند، یعنی جمع مقادیر صفر شود. در شبه کد زیر، اعتبار از حساب صنفی به حساب کیف پول کسب و کار منتقل می‌گردد.
 
-```
+```curl
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -304,7 +304,7 @@ Parameters:
 
 هم‌چنین می‌توانید با لحاظ شناسه یکتا برای انتقال‌های خود(uniqueId) نسبت به جستجو بر اساس همان شناسه اقدام نمایید.
 
-```
+```curl
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -326,7 +326,7 @@ Parameters:
 
 کاربر می‌تواند مبلغی از اعتبار موجود در کیف پول خود را به کاربر دیگر که لازم است جزء مخاطبین او باشد، انتقال دهد. ثبت مخاطبان کاربر از طریق شماره موبایل یا ایمیل یا نام کاربری یا همه آنها صورت می‌گیرد. سپس از طریق سرویس زیر امکان انتقال وجه به مخاطب برای کاربر فراهم می‌گردد:
 
-```
+```curl
 HEADER:
         _token_=[access_token]
         _token_issuer_=1
@@ -349,7 +349,7 @@ Parameters:
 
 هم‌چنین می‌توانید با لحاظ شناسه یکتا برای انتقال‌های خود(uniqueId) نسبت به جستجو بر اساس همان شناسه اقدام نمایید.
 
-```
+```curl
 Header:
         _token_ = [access_token]
         _token_issuer_ = 1    
@@ -381,7 +381,7 @@ Parameters:
 
 توجه داشته باشید کاربر باید در پاد لاگین باشد و با داشتن توکن جاری کاربر و فراخوانی آن در سرویس زیر، می‌توانید کاربر را به دنبال کنندگان کسب و کار خود (لیست مشتریان)، اضافه نمایید:
 
-```
+```curl
 HEADER  _token_=[access_token] & _token_issuer_=1
 POST [platform-address]/nzh/follow/
 ?businessId=[businessid]		کد شناسایی کسب و کار
@@ -393,7 +393,7 @@ POST [platform-address]/nzh/follow/
 
 در این سرویس نیز شناسایی کاربر از روی توکن دریافت شده در هدر انجام می‌شود و در صورت موفقیت پاسخ زیر را برمی‌گرداند:
 
-```
+```curl
 {
 	"hasError": false,
 	"errorCode": 0,
@@ -408,7 +408,7 @@ POST [platform-address]/nzh/follow/
 
 توجه داشته باشید که businessId کد شناسایی کسب و کار شما می باشد. در صورتی که آن را ندارید از سرویس زیر برای دریافت آن استفاده کنید:
 
-```
+```curl
 GET [platform-address]/nzh/biz/getBusiness/?_token_=[API_TOKEN]&_token_issuer_=1
 
 ```
@@ -417,7 +417,7 @@ GET [platform-address]/nzh/biz/getBusiness/?_token_=[API_TOKEN]&_token_issuer_=1
 
 برای دریافت لیست دنبال‌کنندگان کسب و کار خود از سرویس زیر استفاده نمایید:
 
-```
+```curl
 HEADER:
         _token_=[API_TOKEN]
         _token_issuer_=1
@@ -445,7 +445,7 @@ Parameters:
 
 کسب‌وکار می تواند از طریق API زیر، مبلغ مورد نظر خود را به کیف پول دنبال کنندگان خود انتقال دهد:
 
-```
+```curl
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -472,7 +472,7 @@ Parameters:
 - نام و نام خانوادگی صاحب حساب
 - کد امنیتی
 
-```
+```curl
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -496,7 +496,7 @@ Parameters:
 
 با سرویس زیر، لیست انتقال‌ها را دریافت نمایید:
 
-```
+```curl
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -530,7 +530,7 @@ Parameters:
 
 نحوه انتقال پول، بر اساس نحوه پرداخت فاکتور ارسالی، خواهد بود. به عنوان مثال، اگر پرداخت فاکتور به صورت نقدی بوده است، انتقال به مشتری با فراخوانی این سرویس ممکن نخواهد بود و در ریسپانس دریافتی از فراخوانی سرویس، همان مبلغ موجود در حساب کسب و کار(کیف پول و صنفی) برگردانده خواهد شد.
 
-```
+```curl
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -554,7 +554,7 @@ Parameters:
 
 با سرویس زیر می‌توانید لیست انتقالات بر اساس فاکتور را دریافت نمایید.
 
-```
+```curl
 HEADER:
         _token_=[api_token]
         _token_issuer_=1
@@ -584,7 +584,7 @@ Parameters:
 
 توسط سرویس زیر می‌توانید تمام تراکنش­ هایی که در حساب­ های صنفی کسب و کار شما انجام شده را دریافت و مشاهده نمایید:
 
-```
+```curl
 HEADER:
         _token_=<API_TOKEN> 		توکن کسب و کار
         _token_issuer_=1
@@ -606,7 +606,7 @@ Parameters:
 
 همچنین از طریق سرویس زیر صورتحساب روی کیف پول خود را دریافت می‌نمایید:
 
-```
+```curl
 HEADER:
         _token_=<API_TOKEN> 		توکن کسب و کار
         _token_issuer_=1
@@ -630,7 +630,7 @@ Parameters:
 
 ارسال یکی از پارامترهای dateFrom یا dateTo اجباری است. در صورت ارسال پارامتر dateFrom  ارسال dateTo اختیاری است و بالعکس.
 
-```
+```curl
 HEADER:
         _token_=<API_TOKEN> 		توکن کسب و کار
         _token_issuer_=1
@@ -674,7 +674,7 @@ Parameters:
 
 4- CARD_TO_CARD_STATUS_CREATED
 
-```
+```curl
 Header:
     _token_=[API_TOKEN]
     _token_issuer_=1
@@ -701,7 +701,7 @@ Parameters:
 
 خروجی سرویس در صورتی که hasError=false باشد در بخش result  به شکل زیر است:
 
-```
+```curl
 [
   {
     "id": 0,
@@ -749,7 +749,7 @@ Parameters:
 
 توجه داشته باشید شناسه کارت به کارت، در آبجکت items برگردانده می‌شود.
 
-```
+```curl
 Header:
        _token_=[API_TOKEN]
        _token_issuer_=1
