Update پرداخت قبض - 08.md

--- a/Banking/پرداخت قبض - 08.md
+++ b/Banking/پرداخت قبض - 08.md
@@ -8,7 +8,7 @@
 
 پرداخت قبوض تلفن همراه با این سرویس به صورت وصل آنی می باشد.
 
-```
+```curl
 METHOD: POST
 URL: https://services.pod.land/nzh/payServiceBill
 Header:
@@ -25,7 +25,7 @@ Body:
 
 جهت دریافت لیست قبوض پرداختی نیز از سرویس زیر استفاده نمایید:
 
-```
+```curl
 METHOD: POST
 URL: https://services.pod.land/nzh/getServiceBillList/
 Header:
