Update 00 - احراز هویت.md

--- a/Banking/احراز هویت/00 - احراز هویت.md
+++ b/Banking/احراز هویت/00 - احراز هویت.md
@@ -21,9 +21,9 @@
 
      Install-Package Pod_SSO -Version 1.0.1
 
-## "OTP"
+## OTP
 
-## فراخوانی متدها
+### فراخوانی متدها
 
 برای فراخونی هریک از متدها, باید یک شی از کلاس SsoService با ورودی شی از ClientInfo ایجاد کنید.
 
@@ -45,8 +45,7 @@
         var ssoService=new SsoService(ClientInfo);
 ```
 
-## فراخوانی سرویس Handshake
-
+### فراخوانی سرویس Handshake
 سرویس handshake به منظور معرفی دستگاه و هم‌چنین تفاهم بر روی پارامترهای امضای دیجیتال(شامل algorithm،keyId) فراخوانی می‌شود.برای فراخوانی این سرویس نیاز به api_token و client_id می‌باشد که از پنل مدیریت کسب و کار قابل دریافت است.هم‌چنین لازم است قبل از فراخوانی، کلید عمومی کسب و کار به سیستم معرفی شده باشد.
 
 برای فراخوانی این سرویس  از تابع Handshake استفاده نمایید و پارامترهای ClientInfo و ApiToken و DeviceUid را مقداردهی نمایید.
@@ -81,7 +80,7 @@
     ssoService.Handshake(handshakeVo, response => Listener.GetResult(response, out output));
 ```
 
-## درخواست دریافت کد OTP
+### درخواست دریافت کد OTP
  پس از صدا زدن این سرویس ، کد (رمز یکبار مصرف) به تلفن و یا ایمیل داده شده  ارسال می گردد. توجه داشته باشید رمز ارسال شده پس از 300 ثانیه منقضی می گردد.
 
 - پارامتر state اختیاری می باشد و در نمونه کد زیر کامنت شده است. در صورت ارسال، در پاسخ سرویس Verify آن را دریافت خواهید کرد.
@@ -128,7 +127,7 @@
     ssoService.Authorize(authorizeVo, response => Listener.GetResult(response, out output));
 ```
 
-## تایید OTP
+### تایید OTP
 تایید otp به به صورت کد زیر است که در صورت ورود کد تایید درست و یا نادرست پیغام ورود موفق و ناموفق روی identity ارسالی دریافت خواهید نمود.
 
 - پارامتر Identity می تواند حاوی شماره تلفن و یا ایمیل کاربر باشد.
@@ -150,7 +149,7 @@
     ssoService.Verify(verifyVo, response => Listener.GetResult(response, out output));
 ```
 
-## دریافت توکن دسترسی کاربر
+### دریافت توکن دسترسی کاربر
 برای دریافت توکن دسترسی از تابع  GetAccessTokenByOtp  استفاده نمایید.مقدار پارامتر GrantType  باید حتما "authorization_code"  باشد.
 
 پاسخ سرویس حاوی refresh_token، access_token و id_token می باشد که اعتبار access_token به مدت 15 دقیقه می باشد.
@@ -172,9 +171,10 @@
     
     ssoService.GetAccessTokenByOtp(accessTokenByOtpVo, response => Listener.GetResult(response, out output));
 ```
-# SSO
 
-## دریافت توکن دسترسی کاربر
+## SSO
+
+### دریافت توکن دسترسی کاربر
 برای دریافت توکن دسترسی از تابع  GetAccessToken استفاده نمایید.مقدار پارامتر  GrantType  باید حتما "authorization_code"  باشد.
 
 مقدار RedirectUri  باید دقیقا مطابق با Uri ای که در پنل کسب و کار خورد تعریف کرده ای برابر باشد.
@@ -195,7 +195,7 @@
     ssoService.GetAccessToken(accessTokenVo, response => Listener.GetResult(response, out output));
 ```
 
-## به روز رسانی توکن دسترسی کاربر
+### به روز رسانی توکن دسترسی کاربر
 از آنجایی که توکن کاربر هر 900 ثانیه منقضی میشود باید این توکن را با استفاده از refresh_token  بروزرسانی کرد و access_token جدید دریافت کرد.
 
 برای این کار از تابع RefreshAccessToken استفاده می کنیم و کلاس RefreshTokenVo  را مقداردهی می کنیم.
@@ -214,7 +214,7 @@
     ssoService.RefreshAccessToken(refreshTokenVo, response => Listener.GetResult(response, out output));
 ```
 
-## دریافت اطلاعات توکن
+### دریافت اطلاعات توکن
 می توان اطلاعات توکن را از جمله فعال یا غیرفعال بودن آن , از طریق تابع GetTokenInfo و  مقداردهی کلاس TokenInfoVo , دریافت کرد.
 
 فقط ضروری است پارامتر  TokenTypeHint با توجه به توکن مربوطه یکی از دو مقدار زیر باشد:
@@ -243,7 +243,7 @@
         ssoService.GetTokenInfo(tokenInfoVo, response => Listener.GetResult(response, out output));
 ```
 
-## ابطال  توکن
+### ابطال  توکن
 
 می توان توکن را از طریق تابع RevokeToken و مقداردهی کلاس RevokeTokenVo  ابطال کرد.
 
@@ -273,7 +273,7 @@
 
 ## SSO
 
-## نصب پکیج pod-sso-service
+### نصب پکیج pod-sso-service
 
 پکیج ارائه شده برای  سامانه ورود یکپارچه، pod-sso-service، از طریق دستور زیر قابل نصب می باشد.
 
@@ -335,7 +335,7 @@
         $SSOService = new SSOService($clientInfo);
 ```
 
-## دریافت توکن دسترسی کاربر
+### دریافت توکن دسترسی کاربر
 پس از دریافت کد برای دریافت توکن دسترسی کاربربا استفاده از نمونه کد زیر و با پر کردن پارامترهای ورودی می توانید توکن دسترسی کاربر را دریافت نمایید.
 
 ```php
@@ -354,7 +354,7 @@
         }
 ```
 
-## بروزرسانی توکن دسترسی کاربر
+### بروزرسانی توکن دسترسی کاربر
 پس از گذشت زمان expires_in ، توکن دسترسی کاربر منقضی می شود. با استفاده از refresh_token و تابع زیر، توکن معتبر جدید درخواست دهید.
 
 ```php
@@ -373,7 +373,7 @@
         }
 ```
 
-## ابطال توکن
+### ابطال توکن
 ممکن است به هر دلیلی بخواهید دسترسی برنامه به اطلاعات حساب کاربر را از بین ببرید. برای این کار می توانید از ابطال توکن استفاده کنید.
 
 ```php
@@ -394,7 +394,7 @@
         }
 ```
 
-## دریافت اطلاعات توکن 
+### دریافت اطلاعات توکن 
 برای این که از صحت و اعتبار توکن کاربر خود مطلع شوید می توانید اطلاعات توکن مورد نظر را دریافت کنید.
 
 ```php
@@ -416,14 +416,15 @@
 ```
 
 ## OTP
-## ورود با OTP با سرور
+
+### ورود با OTP با سرور
 جهت ایجاد امکان ورود با رمز یکبار مصرف (OTP) برای کاربران، در حالتی که کسب و کار دارای سرور امن و قابلیت ایجاد ارتباط با SSO پاد از طریق سرور خود باشد، این روش پیشنهاد می گردد.
 
 لازم است از طریق سرور، به ازای هر شماره موبایل یا دستگاهی که میخواهد لاگین شود، اطلاعات دستگاه را با متد handshake به SSO معرفی نمایید و keyId دریافت کنید.
 
 http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
 
-## فراخوانی سرویس Handshake سمت SSO
+### فراخوانی سرویس Handshake سمت SSO
 سرویس handshake به منظور معرفی دستگاه و هم‌چنین تفاهم بر روی پارامترهای امضای دیجیتال(شامل algorithm،keyId) فراخوانی می‌شود.برای فراخوانی این سرویس علاوه بر api_token و client_id که از پنل مدیریت کسب و کار قابل دریافت است، لازم است کلید عمومی کسب و کار به سیستم معرفی شده باشد.
 
 ```php
@@ -451,7 +452,7 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
     }
 ```
 
-## درخواست دریافت کد OTP
+### درخواست دریافت کد OTP
  پس از دریافت  key_id از مرحله قبل و با استفاده از کلید خصوصی (private_key)  از متد زیر برای ساخت امضای دیجیتال و ارسال آن و همچنین دریافت کد OTP اقدام کنید. کد مورد نظر بر اساس مقدار فیلد identity  که می فرستید به کاربر مورد نظر از طریق پیامک یا ایمیل فرستاده می شود.
 
 ```php
@@ -488,7 +489,7 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
         }
 ```
 
-## تایید کد OTP
+### تایید کد OTP
 پس از دریافت otp  کاربر باید آن را ارسال کند. از طریق کد زیر و با استفاده امضای دیجیتالی که در متد signatureAuthorize دریافت می کنید  برای تایید کد otp ارسالی از کاربر استفاده کنید :
 
 ```php
@@ -511,7 +512,7 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
         }
 ```
 
-## دریافت توکن از سرور SSO
+### دریافت توکن از سرور SSO
 با استفاده از کد دریافتی از متد verifyOTP و ارسال آن از طریق متد getAccessTokenByOTP توکن دسترسی را از سرور SSO دریافت کنید: 
 
 ```php
@@ -531,13 +532,14 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
 ```        
 
 # [Java](#tab/java)
-# "OTP"
+
+## OTP
 ابتدا jar فایل مربوطه را دانلود کرده و در پروژه خود قرار دهید.
 جهت ایجاد امکان ورود با رمز یکبار مصرف (OTP) برای کاربران، در حالتی که کسب و کار دارای سرور امن و قابلیت ایجاد ارتباط با SSO پاد از طریق سرور خود باشد، این روش پیشنهاد می گردد.
 
 لازم است از طریق سرور، به ازای هر شماره موبایل یا دستگاهی که میخواهد لاگین شود، اطلاعات دستگاه را با متد handshake به SSO معرفی نمایید و keyId دریافت کنید.
 
-## فراخوانی سرویس handshake سمت SSO
+### فراخوانی سرویس handshake سمت SSO
 سرویس handshake به منظور معرفی دستگاه و هم‌چنین تفاهم بر روی پارامترهای امضای دیجیتال (شامل algorithm،keyId) فراخوانی می‌شود.برای فراخوانی این سرویس نیاز به api_token و client_id می‌باشد که از پنل مدیریت کسب و کار قابل دریافت است.هم‌چنین لازم است قبل از فراخوانی، کلید عمومی کسب و کار به سیستم معرفی شده باشد:
 
 تست و نمونه کد:
@@ -592,8 +594,7 @@ http://docs.pod.land/v1.0.8.0/Developer/User/1861/otpwithserver
 
 در مرحله بعد لازم است با کلید دریافت شده و کلید خصوصی کسب و کار یک امضای دیجیتال تولید شود و همراه شماره موبایل کاربر به **SSO** ارسال گردد. 
 
-## ساخت signature
-
+### ساخت signature
 پس از دریافت **keyId** و **privateKey**، به روش زیر اقدام به ساخت امضای دیجیتال نمایید و مقدار امضای دیجیتال را در پارامتر **Authorization** قرار دهید.
 
 پارامتر **Authorization** متشکل از سه بخش **Signature keyId** و **signature** و **headers** است:
@@ -620,8 +621,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
 
 برای مشاهده یک مثال از نحوه ساخت **signature**، می‌توانید سایت https://accounts.pod.land/secTools.html را ببینید. همچنین می توانید از کلاس SigUtils که به زبان جاوا نوشته شده است استفاده نمایید.
 
-##  درخواست دریافت کد OTP
-
+###  درخواست دریافت کد OTP
 پارامتر **identity** می تواند حاوی شماره تلفن و یا ایمیل کاربر باشد.
 
 پس از صدا زدن این سرویس، کد (رمز یکبار مصرف) به تلفن و یا ایمیل داده شده  ارسال می گردد. توجه داشته باشید رمز ارسال شده پس از 300 ثانیه منقضی می گردد.
@@ -749,7 +749,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
 
 -در صورت ورود کد تایید درست و یا نادرست پیغام ورود موفق و ناموفق روی identity ارسالی دریافت خواهید نمود.
 
-## دریافت توکن از سرور SSO
+### دریافت توکن از سرور SSO
 برای دریافت توکن سرویس زیر را فراخوانی نمایید:
 
 ```java
@@ -1043,7 +1043,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
                 }
 ```
 
-## "SSO"
+## SSO
 این سرور که جزئی از پلتفرم می باشد به عنوان سامانه احراز هویت مرکزی مورد استفاده قرار می گیرد. اکثر سرویس هایی که در ادامه معرفی می شوند باید دارای توکن معتبر از این سرور باشند.
 
 همچنین کسب و کارها جهت تعریف کاربران جدید، دریافت و به روزرسانی پروفایل کاربران خود می توانند از این سرور استفاده نمایند و نیازی به نگهداری اطلاعات کاربران در سیستم خود ندارند.
@@ -1052,7 +1052,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
 
 روش کلی به این صورت است که برای ورود کاربر، وی را به صفحه ورود سرور SSO راهنمایی میکنیم و پس از ورود کاربر، توکن مربوط به کاربر به آدرس تعریف شده توسط کسب و کار ارسال می گردد. پس از دریافت توکن، میتوان از آن برای صدازدن سایر سرویس های پلتفرم استفاده نمود و یا اطلاعات پروفایل کاربر را دریافت و ویرایش نمود.
 
-## ‌ورود
+### ‌ورود
 برای ورود کاربران از طریق **SSO**  پاد از آدرس زیر استفاده کنید. مقدار client_id   خود را در آن قرار دهید و آدرسی که می خواهید پاسخ درخواست را در آن دریافت کنید را به عنوان پارامتر  redirect_uri ارسال نمایید.
 
  مقادیر **client_id** و **redirect_uri** باید منطبق بر کلید اتصال تعریف شده   توسط شما باشند.
@@ -1095,7 +1095,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
 
 **توجــــه** تخصیص اسکوپ ها توسط تیم فنی انجام خواهد شد و اسکوپ های بیشتر باید توسط کسب و کار درخواست داده شود.
 
-## ‌دریافت توکن دسترسی کاربر
+### ‌دریافت توکن دسترسی کاربر
 در صورتی که میخواهید کاربران شما از خدمات دیگر پلتفرم پایه مانند کیف پول استفاده نمایند، باید توکن دسترسی آنها را دریافت نمایید و با استفاده از آن، کاربر را در پلتفرم پایه ثبت نمایید. برای دریافت توکن دسترسی از درخواست زیر استفاده نمایید و علاوه بر client_secret و client_id و آدرس بازگشت، کد کاربر را نیز در آن قرار دهید.
 
 ```java
@@ -1210,7 +1210,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
                 }
 ```
 
-##  دریافت اطلاعات توکن‌
+###  دریافت اطلاعات توکن‌
 با استفاده از درخواست زیر می توانید از صحت و اعتبار توکن کاربر خود مطلع شوید.
 
 ```java
@@ -1267,7 +1267,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
 
   **"access_token ,  refresh_token  , id_token"**
   
-##  ابطال توکن
+###  ابطال توکن
 ممکن است به هر دلیلی بخواهید دسترسی برنامه به اطلاعات حساب کاربر را از بین ببرید. برای این منظور از درخواست زیر استفاده نمایید:
 
 ```java
@@ -1378,7 +1378,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
 6.  "getAccessTokenByOtpScenario
 
 
-##  getAccessToken
+###  getAccessToken
  از این تابع برای گرفتن توکن دسترسی کاربر استفاده می شود. اعتبار این توکن محدود است (15 دقیقه) و باید در صورت نیاز با تابع refreshAccessToken به روز شود. پارامتر ورودی code به آدرس برگشت شما بعد از ورود کاربر از طریق لینک ورود پاد ارسال خواهد شد.
 
  
@@ -1428,8 +1428,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
           });
 ```
 
-##  refreshAccessToken
-
+###  refreshAccessToken
  به روز رسانی توکن دسترسی کاربر
 
  
@@ -1465,7 +1464,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
           });
 ```
 
-##  getTokenInfo
+###  getTokenInfo
 
   گرفتن اطلاعات توکن
  
@@ -1501,7 +1500,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
           });
 ```
 
-## revokeToken
+### revokeToken
 
  ابطال توکن
  
@@ -1539,7 +1538,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
 
 ## OTP
 
-## handshake
+### handshake
 
  جهت ایجاد امکان ورود با رمز یکبار مصرف (OTP) برای کاربران از این تابع استفاده می شود. برای آگاهی از جزییات روند رود با رمز یکبار مصرف به لینک زیر مراجعه کنید. همچنین دقت داشته باشید که برای استفاده از روش رمز یمبار مصرف باید کلید های عمومی و خصوصی خود را ایجاد کرده باشید و کلید عمومی را در پنل کسب و کار وارد کرده باشید:
 
@@ -1589,7 +1588,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
           });
 ```
 
-## authorize
+### authorize
 
   بعد از عملیات handshake می توانید با استفاده از این تابع به شماره موبایل یا ایمیل کاربر رمز یکبار مصرف را ارسال کنید. مقدار کلید authorization را باید با توجه به مستندات لینک زیر ایجاد کنید:
 
@@ -1645,7 +1644,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
           });
 ```
 
-##  getOtpScenario
+###  getOtpScenario
 
   این تابع کار هر دو تابع handshake و authorize را همزمان انجام داده و شما درگیر ایجاد sign نخواهید شد
 
@@ -1718,7 +1717,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
           });
 ```
 
-## verify
+### verify
 
   این تابع کد پیامک شده یا ایمیل شده به کاربر را (پارامتر otp) به سرور ارسال می کنید و در صورت صحت اطلاعات ارسالی کد مورد نیاز برای ورود را دریافت خواهید کرد. مقدار کلید authorization را می توانید خود تولید کنید اما اگر در مرحله قبلی از تابع getOtpScenario سناریو استفاده کرده باشید این مقدار در خروجی تابع در اختیار شما قرار می گیرد.
 
@@ -1753,7 +1752,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
               });
 ```
 
-## getAccessTokenByOtp
+### getAccessTokenByOtp
 
   برای دریافت توکن دسترسی در حالت ورود با رمز یکبار مصرف از این تابع استفاده می شود.  پارامتر ورودی کد از خروجی تابع verify دریافت می شود.
 
@@ -1789,7 +1788,7 @@ date: Sat Jun 09 2018 17:47:37 GMT+0430
           });
 ```
 
-## getAccessTokenByOtpScenario
+### getAccessTokenByOtpScenario
 
  این تابع کار هر دو تابع verify و getAccessTokenByOtp همزمان انجام می دهد و توکن دسترسی را بر می گرداند.
 
