Update 01 - عملیات سپرده.md

--- a/Banking/01 - عملیات سپرده.md
+++ b/Banking/01 - عملیات سپرده.md
@@ -1,5 +1,5 @@
 
-# عملیات سپرده
+## عملیات سپرده
 
 با استفاده از این سرویس شما می‌توانید امکان انتقال وجه پایا، ساتنا، حساب به حساب، حساب به کارت (انتقال وجه گروهی) و امکان مشاهده‌ی فهرست سپرده‌ها را در برنامه‌ی خود پیاده‌سازی کنید.
 
