Update 04 - بن کارت.md

--- a/Banking/04 - بن کارت.md
+++ b/Banking/04 - بن کارت.md
@@ -1,4 +1,4 @@
-# بن کارت
+## بن کارت
 اگر سازمانی هستید که قصد ایجاد بن‌کارت‌ الکترونیکی برای کارکنان خود را دارید، می‌توانید از این سرویس استفاده کنید و آن را با مبلغ مورد نظرتان شارژ نمایید. 
 
 <div class="box-end">
