Update درگاه پرداخت - 02.md

--- a/Banking/درگاه پرداخت - 02.md
+++ b/Banking/درگاه پرداخت - 02.md
@@ -1,4 +1,4 @@
-# درگاه پرداخت
+## درگاه پرداخت
  اگر قصد دارید سرویس‌هایی مانند راه‌اندازی درگاه پرداخت انواع قبض موبایل و تلفن، خرید انواع بلیط سفر و هتل، خرید بلیط قطار، خرید و سفارش انواع بیمه، شارژ و ... را در برنامه‌ی خود پیاده‌سازی کنید می‌توانید به راحتی از این سرویس‌ها در برنامه‌ی خود استفاده کنید.
 
  برای انتقال کاربر به درگاه پرداخت اینترنتی، ابتدا باید مقدار keyid را از طریق سرویس زیر دریافت نمایید.
