Update پرداخت قبض - 08.md

--- a/Banking/پرداخت قبض - 08.md
+++ b/Banking/پرداخت قبض - 08.md
@@ -1,4 +1,4 @@
-# مقدمه
+## مقدمه
 اگر به دنبال پیاده‌سازی امکان پرداخت قبوض در برنامه ی خود می‌باشید، با استفاده از این سرویس امکان انجام آن را خواهید داشت.
 ## پرداخت قبض
 
