Update کیف پول - 09.md

--- a/Banking/کیف پول - 09.md
+++ b/Banking/کیف پول - 09.md
@@ -1,4 +1,4 @@
-# کیف پول
+## کیف پول
 روش‌های مختلفی برای پرداخت فاکتور وجود دارد که یکی از آن‌ها از پرداخت از طریق کیف‌ پول است. 
 با استفاده از این سرویس شما می‌توانید برای کاربران خود کیف پول تعریف نمایید، همچنین برای کاربران‌تان درازای خرید محصولات یا برخورداری از خدمات کسب‌وکارشان، فاکتور صادر نمایید و پرداخت آن را پیگیری نمایید.  توجه داشته باشید که استفاده از کیف پول پاد در کسب‌وکارهایی که می‌خواهند از سرویس‌های پاد استفاده کنند یکی از شروط اصلی است.
 
